# rust-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml
docker/: nginx.conf  supervisord.conf
migrations/20160514015739_create_pages_table/: up.sql
page-api/: Cargo.toml
page-api/src/: controller.rs  lib.rs
page-service/: Cargo.toml
portal/page-api/: Cargo.toml
portal/page-api/src/: controller.rs  lib.rs
portal/page-service/: Cargo.toml
portal/page-service/src/: lib.rs  models.rs
portal/src/: main.rs
portal/webserver/: Cargo.toml
portal/webserver/src/: lib.rs  portal_router.rs
webserver/src/: lib.rs  portal_router.rs
