[package]
name = "page-api"
version = "0.1.0"
authors = ["Simon Veilleux <sveilleux1@gmail.com>"]
publish = false

[dependencies]
iron = "*"
router = "*"
diesel = "0.6.1"
r2d2 = "*"
r2d2-diesel = "*"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
page-service = { path = "../page-service" }
