[package]
name = "page-service"
version = "0.1.0"
authors = ["Simon Veilleux <sveilleux1@gmail.com>"]
publish = false

[dependencies]
diesel = "0.6.1"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
serde = "*"
serde_json = "*"
serde_macros = "*"
